fix overflow issues

--- a/movie-finder-react/src/sass/base/_global.scss
+++ b/movie-finder-react/src/sass/base/_global.scss
@@ -12,7 +12,6 @@
   padding: 0;
   font-family: $primary-font;
   transition: 0.05s;
-  
 }
 
 // App
@@ -28,15 +27,17 @@
     width: 90%;
 }
 
-.main__wrapper{
+.main__wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
     min-height: 100vh;
     margin-top: 148px;
-    margin-left: 100px;
+    margin-left: var(--sidebar-width);
+    width: calc(100% - var(--sidebar-width));
+    overflow-x: hidden;
 }
+
 
 // Buttons
 .primary-button{
