--- a/movie-finder-react/src/sass/components/_MainContent.scss
+++ b/movie-finder-react/src/sass/components/_MainContent.scss
@@ -1,139 +1,155 @@
-@import '../../sass/helpers/mixins';
-.main{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: auto;
-}
+    @import '../../sass/helpers/mixins';
+    .main{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+    }
 
-.main__content{
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    gap : 2rem;
-    overflow-x: auto;
-    min-height: 450px;
-    padding: 3em;
+    .main__content{
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        gap : 2rem;
+        overflow-x: auto;
+        min-height: 450px;
+        padding: 3em;
 
-    &--column{
-        padding: 0;
-        .header__wrapper{
-            width: auto;
-            justify-content: space-around;
-            margin-top: -50px;
-            text-wrap: nowrap;
+        &--column{
+            padding: 0;
+            .header__wrapper{
+                width: auto;
+                justify-content: space-around;
+                margin-top: -50px;
+                text-wrap: nowrap;
+            }
+        }
+
+        &--single{
+            display: block;
+            padding: 0;
         }
     }
 
-    &--single{
-        display: block;
-        padding: 0;
-    }
-}
-
-.movie__slider__main{
-    background-image: url('../../img/background.png');
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-}
-
-.scroll__content , .bottom__content , .movie__slider__main , .personal__content , 
-.genre__preview__content , .coming__soon__content{
-    width: 100%;
-}
-
-.bottom__content , .coming__soon__content {
-    background: #131722;
-}
-
-.header-filters{
-    display: flex;
-    flex-direction: column;
-    gap : 1rem;
-}
-
-.header__wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: space-between;
-    width: 100%;
-    min-height: 220px;
-
-    h1{
-        max-width: 310px;
-    }
-}
-
-.next__icons{
-    display: flex;
-    gap : 2rem;
-    cursor: pointer;
-
-    button{
-        cursor: pointer;
-        border: none;
-        outline: none;
-
-        svg{    
-            color : white;
-        }
+    .movie__slider__main{
+        background-image: url('../../img/background.png');
+        background-position: center;
+        background-size: cover;
+        width: 100%;
     }
 
-    
-}
+    .scroll__content , .bottom__content , .movie__slider__main , .personal__content 
+    , .genre__preview__content, .coming__soon__content{
+        width: 100%;
+    }
 
-.next__icons button:disabled svg{
-    filter: grayscale(100%);
-    opacity: 0.5;
-}
-    
-@media (max-width : 660px){
-    .slide__container{
-        margin-left: 0px !important;
+    .bottom__content , .coming__soon__content {
+        background: #131722;
+    }
+
+    .header-filters{
+        display: flex;
+        flex-direction: column;
+        gap : 1rem;
     }
 
     .header__wrapper{
         display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+        flex-direction: column;
+        align-items: start;
+        justify-content: space-between;
+        width: 100%;
+        min-height: 220px;
 
-    .header__wrapper h2{
-        font-size: 1.2rem;
+        h1{
+            max-width: 310px;
+        }
     }
 
     .next__icons{
-        display: none;
-    }
-}
+        display: flex;
+        gap : 2rem;
+        cursor: pointer;
 
-@media (max-width : 450px){
-    .item{
-        width: 90px;
-        height: 160px;
-    }
+        button{
+            cursor: pointer;
+            border: none;
+            outline: none;
 
-    .item__overlay{
-        width: 100%;
-        height: 100%;
-    }
+            svg{    
+                color : white;
+            }
+        }
 
-    .item__overlay .favorites_button , .details_button{
-        width: 24px;
-        height: 24px;
-        padding: 0;
-
-        font-size: .7rem;
-        text-align: center;
-    }
-
-    .cards__wrapper{
-        display: grid;
-        grid-template-columns: repeat(4 , auto);
-        grid-auto-flow: column;
-        gap : 1rem;
         
     }
-}
+
+    .next__icons button:disabled svg{
+        filter: grayscale(100%);
+        opacity: 0.5;
+    }
+        
+    @media (max-width : 660px){
+        .slide__container{
+            margin-left: 0px !important;
+        }
+
+        .header__wrapper{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .header__wrapper h2{
+            font-size: 1.2rem;
+        }
+
+    }
+
+    @media (max-width : 1172px) {
+        .header__wrapper {
+            align-items: center;
+            justify-content: center;
+            gap : 2rem;
+        }
+    }
+
+    @media (max-width : 1059px) {
+        .main__content{
+            flex-direction: column;
+            overflow-x: hidden;
+        }
+
+        .next__icons {
+            display: none;
+        }
+    }
+
+    @media (max-width : 450px){
+        .item{
+            width: 90px;
+            height: 160px;
+        }
+
+        .item__overlay{
+            width: 100%;
+            height: 100%;
+        }
+
+        .item__overlay .favorites_button , .details_button{
+            width: 24px;
+            height: 24px;
+            padding: 0;
+
+            font-size: .7rem;
+            text-align: center;
+        }
+
+        .cards__wrapper{
+            display: grid;
+            grid-template-columns: repeat(4 , auto);
+            grid-auto-flow: column;
+            gap : 1rem;
+            
+        }
+    }
